# unique_words

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile-ubuntu20.04  Dockerfile-ubuntu22.04  LICENSE  README.md  build.sh  gen.cpp  prepare-ubuntu20.04.sh  prepare-ubuntu22.04.sh  test.cpp  test.sh  trie.hpp  util.cpp  util.hpp  uwc.cpp
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
test/: ala.txt  info.txt  r25.txt  t1.txt
